--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Greenwich.SR2</spring-cloud.version>
+		<elasticsearch.version>7.3.2</elasticsearch.version>
 	</properties>
 
 	<dependencies>
