--- a/elasticsearch-writer/Dockerfile
+++ b/elasticsearch-writer/Dockerfile
@@ -1,5 +1,3 @@
 FROM openjdk:8
 COPY target/elasticsearch-writer-1.0.0.jar ./elasticsearch-writer.jar
-COPY run.sh /run.sh
-RUN ["chmod", "+x", "./run.sh"]
-ENTRYPOINT ["./run.sh"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "./elasticsearch-writer.jar"]
