--- a/opal-confirm-conversion-service/Dockerfile
+++ b/opal-confirm-conversion-service/Dockerfile
@@ -1,5 +1,3 @@
 FROM openjdk:8
 COPY target/opal-confirm-conversion-service-1.0.0.jar ./opal-confirm-conversion-service.jar
-COPY run.sh /run.sh
-RUN ["chmod", "+x", "./run.sh"]
-ENTRYPOINT ["./run.sh"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "./opal-confirm-conversion-service.jar"]
