--- a/quality-metrics-service/Dockerfile
+++ b/quality-metrics-service/Dockerfile
@@ -1,5 +1,3 @@
 FROM openjdk:8
 COPY target/quality-metrics-service-1.0.0.jar ./quality-metrics-service.jar
-COPY run.sh /run.sh
-RUN ["chmod", "+x", "./run.sh"]
-ENTRYPOINT ["./run.sh"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "./quality-metrics-service.jar"]
