Enhanced: dataset-file-fetcher is added to docker-compose.yml. Maintain: dataset folder is mounted as a volume to the dataset-file-fetcher

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,6 +88,25 @@ services:
       - rabbitmq
       - discovery-server
       - config-server
+  dataset-file-fetcher:
+    build: dataset-file-fetcher
+    ports:
+      - 8007:8007
+    environment:
+      - RABBITMQ_ADDRESS=rabbitmq
+      - RABBITMQ_PORT=5672
+      - RABBITMQ_USERNAME=${RABBITMQ_USERNAME}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
+      - EUREKA_URL=http://discovery-server:8761/eureka/
+      - CONFIG_SERVER_URL=http://config-server:8888
+      - PORTAL=europeandataportal
+      - FOLDER_PATH=/data
+    depends_on:
+      - rabbitmq
+      - discovery-server
+      - config-server
+    volumes:
+      - ${DATASET_FOLDER}:/data
   opal-confirm-conversion-service:
     build: opal-confirm-conversion-service
     ports:
