--- a/elasticsearch-writer/pom.xml
+++ b/elasticsearch-writer/pom.xml
@@ -107,6 +107,15 @@
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
         </dependency>
+
+		<!-- Included as following file was missing on running tests by maven: -->
+		<!-- java.lang.NoClassDefFoundError: org/apache/commons/codec/digest/MurmurHash3 -->
+		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.14</version>
+		</dependency>
     </dependencies>
 
 
